# Vouch

./: .env.example  .eslintrc.js  .gitignore  CLI-COMMANDS.md  LOCAL_DEVELOPMENT.md  QUICKSTART.md  README.md  SETUP.md  Walkthrough  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  generate-certs.sh  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml  self-hosted.yml
apps/api/: Dockerfile  eslint.config.mjs  nodemon.json  package.json
apps/api/src/: main.ts  supabase.ts
apps/keeper/: Dockerfile  main.py  pyproject.toml
apps/ml-engine/: Dockerfile  main.py  pyproject.toml
apps/web/: .env.example  Dockerfile  eslint.config.js  package.json  svelte.config.js  vite.config.ts
apps/web/src/: app.css  app.d.ts  app.html
apps/web/src/lib/: env.ts  navLinks.ts  supabase.ts
apps/web/src/routes/: +page.svelte  (+1 more)
docs/: LOCAL_BLOCKCHAIN.md  WALLET_INTEGRATION.md
services/client/: Dockerfile.dev  Dockerfile.prod  README.md  package.json  vite.config.ts
services/client/src/: app.d.ts
services/core-api/: Dockerfile.dev  Dockerfile.prod  package.json
services/core-api/src/: index.ts
services/credit-score/: Dockerfile.dev  Dockerfile.prod  main.py  requirements.txt
services/credit-score/models/: .gitkeep
services/credit-score/services/: blockchain_data.py  credit_scoring.py
services/liquidation-bot/: Dockerfile.dev  Dockerfile.prod  main.py  requirements.txt
services/liquidation-bot/services/: liquidator.py  loan_monitor.py
services/nginx/: nginx.conf
supabase/: config.toml
(+21 files in other folders)
